# Save2

./: .dockerignore  .env  .env.template  .pre-commit-config.yaml  Dockerfile  Main.py  alembic.ini  database.py  docker-compose.dev.yml  main.py  ml_engine.py  model.py  models.py  pyproject.toml  reorganize_structure.py  requirements.txt  verify_structure.py
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  organize-workflows.yml  reorganize-structure.yml
saveai/core/: config.py  init.py
saveai/core/config/: settings.py
saveai/core/models/: transaction.py
saveai/core/repositories/: transaction_repository.py
saveai/core/saveai/core/: models.py
saveai/core/saveai/core/saveai/core/: database.py
saveai/core/saveai/core/saveai/core/saveai/services/: __init__.py
saveai/core/saveai/core/saveai/core/saveai/services/saveai/services/: ml_engine.py  transaction.py
saveai/core/saveai/core/saveai/core/saveai/services/saveai/services/saveai/services/: blockchain.py
saveai/core/saveai/core/saveai/core/saveai/services/saveai/services/saveai/services/saveai/services/: security.py
saveai/core/saveai/core/saveai/core/saveai/services/saveai/services/saveai/services/saveai/services/saveai/services/: analytics.py
saveai/deployment/migrations/: env.py
saveai/deployment/migrations/versions/: 001_create_transactions_table.py
saveai/deployment/sql/: transactions.sql
saveai/services/: blockchain.py  security.py
saveai/tests/services/: test_transaction.py
(+4 files in other folders)
